--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "pg-hstore": "^2.3.2",
     "request": "^2.79.0",
     "sequelize": "^3.29.0"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
