--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "pg": "^6.1.2",
     "pg-hstore": "^2.3.2",
     "request": "^2.79.0",
-    "sequelize": "^3.29.0"
+    "sequelize": "^3.29.0",
+    "sequelize-cli": "^2.5.1"
   }
 }
