update sequelize models

--- a/config/config.json
+++ b/config/config.json
@@ -1,17 +1,20 @@
 {
   "development": {
-    
+  
     "database": "wedding",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
-    
+  
     "database": "wedding",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "production": {
-    "use_env_variable": "DATABASE_URL"
+  
+    "database": "database_production",
+    "host": "127.0.0.1",
+    "dialect": "postgres"
   }
 }
