--- a/config/config.json
+++ b/config/config.json
@@ -6,15 +6,11 @@
     "dialect": "postgres"
   },
   "test": {
-  
     "database": "wedding",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "production": {
-  
-    "database": "database_production",
-    "host": "127.0.0.1",
-    "dialect": "postgres"
+    "use_env_variable": "DATABASE_URL"
   }
 }
